Endpoint de ranking de cidades